[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Styles/Buttons/norm.tres" type="StyleBox" id=2]
[ext_resource path="res://Styles/Buttons/pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Buttons/hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/Labels/halt_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/misc/hold_false.png" type="Texture" id=6]
[ext_resource path="res://Scripts/held/held_master.gd" type="Script" id=7]
[ext_resource path="res://Styles/Labels/Desc.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.054902, 0.054902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 0, 0.631373, 0.301961 )
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_color = Color( 0.054902, 0.054902, 0.054902, 1 )
shadow_size = 8

[sub_resource type="DynamicFont" id=2]
size = 13
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
margin_right = 162.0
margin_bottom = 145.0
rect_min_size = Vector2( 160, 27 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
margin_right = 162.0
margin_bottom = 145.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 162.0
margin_bottom = 145.0

[node name="desc" type="Label" parent="VBoxContainer"]
visible = false
margin_left = 28.0
margin_right = 138.0
margin_bottom = 27.0
rect_min_size = Vector2( 110, 0 )
mouse_filter = 1
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "Displays LOREDs that are halted or on hold."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 162.0
margin_bottom = 124.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 1.0
margin_right = 161.0
margin_bottom = 124.0

[node name="all" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/all"]
margin_right = 160.0
margin_bottom = 28.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer"]
margin_left = 24.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 22.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.760784, 0.729412, 0.6, 1 )
text = "Sweep:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="halt" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer"]
margin_left = 69.0
margin_right = 100.0
margin_bottom = 28.0
rect_min_size = Vector2( 31, 28 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer/halt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.90735e-06
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.760784, 0.729412, 0.6, 1 )
text = "=="
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hold" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer"]
margin_left = 104.0
margin_right = 135.0
margin_bottom = 28.0
rect_min_size = Vector2( 31, 28 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer/hold"]
self_modulate = Color( 0.760784, 0.729412, 0.6, 1 )
texture = ExtResource( 6 )
centered = false

[node name="individual" type="ScrollContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 160.0
margin_bottom = 124.0
rect_min_size = Vector2( 160, 92 )
mouse_filter = 1
size_flags_horizontal = 4
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/individual"]
margin_right = 160.0
margin_bottom = 92.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/individual/CenterContainer"]
margin_left = 80.0
margin_top = 46.0
margin_right = 80.0
margin_bottom = 46.0
alignment = 1
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer/halt" to="." method="_on_button_down"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer/halt" to="." method="_on_halt_pressed"]
[connection signal="button_down" from="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer/hold" to="." method="_on_button_down"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/all/HBoxContainer/hold" to="." method="_on_hold_pressed"]
